--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
                     <div class="combobox-container" id="baggageCombobox">
                         <input type="text" inputmode="decimal" class="combobox-input" id="baggageAmountInput"
                             value="23">
-                        <button class="combobox-arrow" type="button"></button>
+                        <button class="combobox-arrow" type="button" name="baggage dropdown selection"></button>
                         <div class="combobox-dropdown" id="baggageDropdown"></div>
                     </div>
 
