--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
                         segment</label>
 
                     <div class="combobox-container" id="baggageCombobox">
+                    <label for="baggageAmountInput"></label>
                         <input type="text" inputmode="decimal" class="combobox-input" id="baggageAmountInput"
                             value="23">
                         <button class="combobox-arrow" type="button" title="baggage dropdown selection"></button>
