--- a/public/index.html
+++ b/public/index.html
@@ -137,9 +137,9 @@
                         segment</label>
 
                     <div class="combobox-container" id="baggageCombobox">
-                    <label for="baggageAmountInput"></label>
-                        <input type="text" inputmode="decimal" class="combobox-input" id="baggageAmountInput"
-                            value="23">
+                        <label for="baggageAmountInput">
+                            <input type="text" inputmode="decimal" class="combobox-input" id="baggageAmountInput" value="23">
+                        </label>
                         <button class="combobox-arrow" type="button" title="baggage dropdown selection"></button>
                         <div class="combobox-dropdown" id="baggageDropdown"></div>
                     </div>
