--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@ Contact Info"></textarea>
             </div>
             <div class="history-controls">
                 <input type="text" id="historySearchInput" placeholder="Search by passenger or route...">
-                <select id="historySortSelect">
+                <select id="historySortSelect" title="history Sort Select">
                     <option value="newest">Sort by Newest First</option>
                     <option value="oldest">Sort by Oldest First</option>
                 </select>
