--- a/public/index.html
+++ b/public/index.html
@@ -1119,7 +1119,7 @@ button {
                     <h3>Input PNR Data</h3>
                     <div class="header-actions">
                         <!-- <div> -->
-                            <button class="change-text-btn header-btn">
+                            <button class="change-text-btn header-btn" onclick="https://pnr-devn.vercel.app/">
                                 <span class="header-btn default-text" style="color: black;">New Version 1.2.5</span>
                                 <span class="hover-text header-btn"><a href="https://pnr-devn.vercel.app/">Switch to New Version 1.1</a></span>
                             </button>
